# MyPongGame

./: .gitignore  .gitmodules  CMakeLists.txt  GameState.h  PongGame.sln  PongGame.vcxproj  PongGame.vcxproj.filters  packages.config
include/Game/: Game.h  GameSettings.h
include/GameObjects/: Ball.h  Enemy.h  GameOverTexture.h  MenuButton.h
include/GameObjects/Base/: IGameObject.h
include/InputHandler/: InputHandler.h
include/States/: MenuState.h  PlayState.h
include/StatesManager/: GameStateMachine.h
include/TexturesManager/: TextureManager.h
src/: main.cpp
src/Game/: Game.cpp  Game.h  GameSettings.h
src/GameObjects/: Ball.cpp  Ball.h  Enemy.cpp  Enemy.h  GameObject.cpp  GameObject.h  GameOverTexture.cpp  GameOverTexture.h  GameScore.cpp  GameScore.h  LoaderParams.h  MenuButton.cpp  MenuButton.h  Player.cpp  Player.h  ScoreText.cpp  ScoreText.h
src/GameObjects/Base/: GameObject.cpp  GameObject.h  IGameObject.h  LoaderParams.h
src/InputHandler/: InputHandler.cpp  InputHandler.h
src/LibExt/: Vector2D.h
src/States/: GameOverState.cpp  GameOverState.h  GameState.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  PlayState.cpp  PlayState.h
src/StatesManager/: GameStateMachine.cpp  GameStateMachine.h
src/TexturesManager/: TextureManager.cpp  TextureManager.h
